# 0.00.13 (61026) Feb 6, 2012
2/6/12 Deploying to dev for review and feedback.
Added counter to protein collection area for number of instances of a given protein.
Added better hint for indicating that user needs to move protein into collection area - area flashes when protein produced.
Made the DNA shape change when being transcribed.
Changed wording in protein capture are to make it clearer that it is protein TYPES that complete the collection.
Changed labels on transcription factors to use words rather than "+" and "-" symbols.
Tweaked model params on last tab to make it more responsive to changes.
Increased protein size to make them, and the capture area, more eye catching.
Optimized cell placement algorithm.
# 0.00.12 (60483) Jan 20, 2012
1/20/12 Publishing to dev for potential use in classroom setting.
Temporarily removed the Protein Levels tab so that a version with only working tabs can be published.
Renamed tabs.
Changed the background color on all tabs to be black when outside of a cell.
Changed cell placement algorithm on 3rd tab to look more random and therefore realistic.
Added a dialog that shows real E. Coli cells in the 3rd tab.
Change cell shapes to look roughly like E. Coli.
Added zoom in/out feature on 1st tab.
Completed integration of numerical model on 3rd tab.
Got mRNA destroyer working.
# 0.00.11 (59967) Jan 6, 2012
1/6/12 Snapshot of version reviewed with biology expert.
Implemented first cut of third tab, which allows the user to tweak cell parameters for one or several cells and see how protein levels change.
Fixed an issue where mRNA would be above the ribosome in the z-order in some cases, which looked weird.
Added placement hint for mRNA destroyer.
Added "capture signal" to the protein capture area.  This is a flashing node that surrounds the location where the protein is moved when captured.
# 0.00.10 (58851) Nov 29, 2011
11/29/11 Deploying to dev as a snapshot for use in discussions with design team.